# kgx

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MANUAL.md  README.md  STATUS.md  context-layer.md  dev-install.sh  docker-compose.yml  e2e-test-report.html  gate.sh  index.md  install.sh  log.md  opencode.json  prd.md
.claude/commands/: extract.md  index.md  kgx:ask.md  kgx:dream.md  kgx:recall.md  kgx:review.md  kgx:ship.md  kgx:sync.md  link.md  search.md  status.md
.claude/skills/kgx/: SKILL.md
.github/workflows/: ci.yml  release.yml
.kgx/hooks/: verify-finished.sh
.opencode/: rtk.md
.opencode/command/: kgx-pole.md
.opencode/skills/kgx/: SKILL.md
.opencode/skills/kgx-codebase/: SKILL.md
.opencode/skills/kgx-pole/: SKILL.md
bench/: bench.py  gen_corpus.py  gen_large_corpus.py  manifest.json  results-10k-with-base-36ish.json  results-10k-with-base-dedup.json  results-10k-with-base-rerank-jina.json  results-10k-with-base-rerank-mock.json  results-10k-with-base.json  results-10k.json  results.json  test_bench_scripts.py
crates/kgx-bench/: Cargo.toml
crates/kgx-bench/src/: lib.rs
crates/kgx-cli/: Cargo.toml
crates/kgx-cli/src/: cli.rs  git.rs  main.rs  output.rs  vault.rs
crates/kgx-cli/src/commands/: ask.rs  capture.rs  codebase.rs  cron.rs  dashboard.rs  docs.rs  dream_cmd.rs  extract_cmd.rs  graph.rs  index.rs  init.rs  link.rs  mcp_server.rs  project.rs  pull.rs  query.rs  recall.rs  refine_cmd.rs  review.rs  search.rs  serve.rs  ship.rs  status.rs  sync.rs  tokens.rs  validate.rs
crates/kgx-cli/tests/: cli_ask.rs  cli_ask_global.rs  cli_capture.rs  cli_cron.rs  cli_dashboard.rs  cli_docs.rs  cli_dream.rs  cli_extract.rs  cli_graph.rs  cli_index.rs  cli_index_communities.rs  cli_init.rs  cli_link.rs  cli_review.rs  cli_search.rs  cli_status.rs  cli_sync.rs  cli_validate.rs
crates/kgx-cli/tests/common/: mod.rs
crates/kgx-convert/: Cargo.toml
crates/kgx-convert/src/: lib.rs  pandoc.rs  pdf.rs  xlsx.rs
crates/kgx-core/: Cargo.toml
crates/kgx-core/src/: diff.rs  error.rs  json.rs  lib.rs  llm.rs  types.rs  util.rs
crates/kgx-cron/: Cargo.toml
crates/kgx-cron/src/: calendar.rs  lib.rs  manage.rs  unit.rs
crates/kgx-docs/: Cargo.toml
crates/kgx-docs/src/: usecase.rs
crates/kgx-docs/templates/: usecase.html.tera
crates/kgx-docs/tests/: usecase.rs
crates/kgx-dream/: Cargo.toml
crates/kgx-dream/src/: context.rs  friction.rs  lib.rs  refine.rs  run.rs
crates/kgx-dream/src/passes/: community.rs  contradiction.rs  dedup.rs  mod.rs  open_questions.rs  orphan_repair.rs  staleness.rs  supersession.rs
crates/kgx-dream/tests/: run.rs
crates/kgx-extract/: Cargo.toml
crates/kgx-extract/src/: conversation.rs  lib.rs  pipeline.rs  prompt.rs
crates/kgx-extract/tests/: pipeline.rs  pole.rs  prompt.rs
crates/kgx-graph/: Cargo.toml
crates/kgx-graph/src/: brain.rs  build.rs  community.rs  embed.rs  graph_buffer.rs  knn.rs  leiden.rs  lib.rs  links.rs  migrate.rs  pagerank.rs  query.rs  rerank.rs  schema.rs  sparse.rs  sparse_embed.rs  vec.rs
crates/kgx-graph/tests/: build.rs  build_pole.rs  community.rs  incremental.rs  leiden.rs  query.rs  schema.rs  semantic_e2e.rs
crates/kgx-llm/: Cargo.toml
crates/kgx-llm/src/: claude.rs  lib.rs  mock.rs  ollama.rs  openai.rs  select.rs
crates/kgx-llm/tests/: mock.rs
crates/kgx-mcp/: Cargo.toml
crates/kgx-mcp/src/: http.rs  lib.rs  protocol.rs  server.rs  tools.rs  url_crawl.rs
crates/kgx-mcp/src/tools/: deep_search.rs  dream.rs  get.rs  ingest_conversation.rs  ingest_file.rs  ingest_url.rs  mod.rs  nl_query.rs  query.rs  recall.rs  upsert.rs
crates/kgx-mcp/tests/: protocol.rs  tools_dispatch.rs  tools_ingest_file.rs
crates/kgx-okf/: Cargo.toml
crates/kgx-okf/src/: bundle.rs  lib.rs  validate.rs
crates/kgx-okf/tests/: bundle.rs  validate_integration.rs
crates/kgx-ponytail/: Cargo.toml
crates/kgx-ponytail/src/: audit.rs  ladder.rs  lib.rs
crates/kgx-ponytail/tests/: ladder.rs
crates/kgx-retrieval/: Cargo.toml
crates/kgx-retrieval/src/: community_summary.rs  global.rs  hybrid.rs  lib.rs  ppr.rs  rerank.rs  rrf.rs
crates/kgx-retrieval/tests/: community_summary.rs  hybrid.rs  rerank_stage.rs
crates/kgx-rtk/: Cargo.toml
crates/kgx-rtk/src/: install.rs  lib.rs  wrap.rs
crates/kgx-rtk/tests/: wrap.rs
crates/kgx-store/: Cargo.toml
crates/kgx-store/src/: lib.rs
crates/kgx-tokens/: Cargo.toml
crates/kgx-tokens/src/: aggregate.rs  lib.rs  record.rs
crates/kgx-tokens/tests/: persist.rs
crates/kgx-vault/: Cargo.toml
crates/kgx-vault/src/: lib.rs  markdown.rs  parse.rs  scan.rs  write.rs
crates/kgx-vault/tests/: scan_integration.rs
crates/kgx-viz/: Cargo.toml
crates/kgx-viz/examples/: gen-demo.rs
crates/kgx-viz/src/: cytoscape.rs  dot.rs  graphml.rs  html.rs  lib.rs  mermaid.rs  model.rs
crates/kgx-viz/templates/: graph.html.tera
crates/kgx-viz/tests/: html.rs
deploy/: Dockerfile
docs/: KGX-FINAL.md  eval-results.md  kgx-36sprints-graph.html  kgx-3d-brain.html  kgx-battletest-report.html  kgx-final-report.html  kgx-graph-demo.html  kgx-guide.html  sprint-simulation-benchmark-results.md  sprint-simulation.md  user-manual.md
docs/superpowers/plans/: 2026-06-27-kgx-master-plan.md  2026-06-27-kgx-phase0-skeleton.md  2026-06-27-kgx-phase1-brain.md  2026-06-27-kgx-phase2-ask.md  2026-06-27-kgx-phase3-dream.md  2026-06-27-kgx-phase4-graphrag.md  2026-06-27-kgx-phase5-mcp-skills.md  2026-06-27-kgx-phase6-polish.md  2026-07-02-kgx-unified-rewrite.md  2026-07-03-3d-graph-viewer.md  2026-07-04-kgx-phase0-real-bugs.md  2026-07-05-battletest-gaps.md  2026-07-05-retrieval-pipeline.md  2026-07-10-doc-pole-url-ingest.md  (+1 more)
scripts/: package-release.sh
skills/agent-skill-orchestration/: SKILL.md
skills/cli-automation/: SKILL.md
skills/cli-data-processing/: SKILL.md
skills/cli-debugging/: SKILL.md
skills/cli-parallel/: SKILL.md
skills/codex/: AGENTS.md  config.toml  hooks.json
skills/hooks/: verify-finished.sh
skills/opencode/: opencode.json
skills/skill-composition/: SKILL.md
tests/fixtures/: qa.json
tests/smoke/: Cargo.toml
(+105 files in other folders)
