[workspace]
resolver = "2"
members = ["crates/kgx-core"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
ulid = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.11"
walkdir = "2"
tera = "1"
tempfile = "3"
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
