[workspace]
resolver = "2"
members = ["crates/kgx-core", "crates/kgx-store", "crates/kgx-vault", "crates/kgx-okf", "crates/kgx-cli", "crates/kgx-tokens", "crates/kgx-graph", "crates/kgx-llm", "crates/kgx-extract", "crates/kgx-retrieval", "crates/kgx-dream", "crates/kgx-rtk", "crates/kgx-ponytail", "crates/kgx-cron", "crates/kgx-mcp", "crates/kgx-viz", "crates/kgx-docs", "crates/kgx-bench", "tests/smoke"]

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
anyhow = "1"
ulid = "1"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.11"
walkdir = "2"
tera = "1"
tempfile = "3"
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
