[package]
name = "kgx-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "kg"
path = "src/main.rs"

[features]
default = []
semantic = ["kgx-llm/semantic"]
candle = ["kgx-llm/candle"]

[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-okf = { path = "../kgx-okf" }
kgx-vault = { path = "../kgx-vault" }
kgx-graph = { path = "../kgx-graph" }
kgx-tokens = { path = "../kgx-tokens" }
kgx-extract = { path = "../kgx-extract" }
kgx-llm = { path = "../kgx-llm" }
kgx-retrieval = { path = "../kgx-retrieval" }
kgx-dream = { path = "../kgx-dream" }
kgx-ponytail = { path = "../kgx-ponytail" }
kgx-cron = { path = "../kgx-cron" }
kgx-mcp = { path = "../kgx-mcp" }
kgx-rtk = { path = "../kgx-rtk" }
kgx-viz = { path = "../kgx-viz" }
kgx-docs = { path = "../kgx-docs" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
walkdir.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
