[package]
name = "kgx-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
async-trait = "0.1"
regex = "1"
time = { version = "0.3", features = ["formatting", "parsing"] }
