[package]
name = "kgx-dream"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-vault = { path = "../kgx-vault" }
kgx-graph = { path = "../kgx-graph" }
kgx-retrieval = { path = "../kgx-retrieval" }
kgx-llm = { path = "../kgx-llm" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile.workspace = true
