[package]
name = "kgx-extract"
edition.workspace = true
version.workspace = true
license.workspace = true
[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-vault = { path = "../kgx-vault" }
kgx-llm = { path = "../kgx-llm" }
kgx-ponytail = { path = "../kgx-ponytail" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
