[package]
name = "kgx-llm"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["semantic"]
candle = ["kgx-graph/candle"]
semantic = ["kgx-graph/semantic"]

[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-graph = { path = "../kgx-graph" }
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
