[package]
name = "kgx-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-vault = { path = "../kgx-vault" }
kgx-graph = { path = "../kgx-graph" }
kgx-retrieval = { path = "../kgx-retrieval" }
kgx-extract = { path = "../kgx-extract" }
kgx-dream = { path = "../kgx-dream" }
kgx-llm = { path = "../kgx-llm" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }

[dev-dependencies]
tempfile.workspace = true
walkdir.workspace = true
