[package]
name = "kgx-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-vault = { path = "../kgx-vault" }
kgx-graph = { path = "../kgx-graph" }
kgx-retrieval = { path = "../kgx-retrieval" }
kgx-extract = { path = "../kgx-extract" }
kgx-dream = { path = "../kgx-dream" }
kgx-llm = { path = "../kgx-llm" }
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
axum = "0.7"
tower = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
walkdir.workspace = true
