[package]
name = "kgx-okf"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-vault = { path = "../kgx-vault" }
serde.workspace = true
serde_json.workspace = true
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile.workspace = true
walkdir.workspace = true
