[package]
name = "kgx-retrieval"
edition.workspace = true
version.workspace = true
license.workspace = true
[dependencies]
kgx-core = { path = "../kgx-core" }
kgx-graph = { path = "../kgx-graph" }
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
[dev-dependencies]
kgx-vault = { path = "../kgx-vault" }
kgx-llm = { path = "../kgx-llm" }
tempfile.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
