[package]
name = "kgx-vault"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
kgx-core = { path = "../kgx-core" }
serde.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
pulldown-cmark.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true
